# muffmode

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  game_x64.exp  game_x64.lib
bots/navigation/: mm-rage.nav  mm-railgun101.nav
docs/: custom_gravity_tests.md  gameplay.html  intermission_flow_test.md  map_transition_crash_fixes.md  progress.txt  readme.txt  regression_tests.md
docs/wiki/: Command-Reference.md  Gametypes-and-Mutators.md  General-Features.md  Home.md  Match-Features-and-Balance.md  Server-Configuration.md
players/female/: athena_i.pcx
src/: MuffMode.sln  bg_local.h  bg_local.hpp  cg_local.hpp  cg_main.cpp  cg_screen.cpp  g_activation.cpp  g_activation.h  g_ai.cpp  g_ai_new.cpp  g_broadcast_utils.h  g_chase.cpp  g_client_cfg.cpp  g_cmds.cpp  g_combat.cpp  g_ctf.cpp  g_cvars.hpp  g_func.cpp  g_horde.cpp  g_items.cpp  g_items_limits.h  g_local.h  g_local.hpp  g_main.cpp  g_maps.cpp  g_match_logging.cpp  g_match_state.cpp  g_menu.cpp  g_misc.cpp  g_monster.cpp  g_monster_spawn.cpp  g_phys.cpp  g_runthink.h  g_save.cpp  g_save_test.cpp  g_spawn.cpp  g_svcmds.cpp  g_target.cpp  g_trigger.cpp  g_turret.cpp  (+46 more)
src/bots/: bot_debug.cpp  bot_exports.cpp  bot_exports.h  bot_includes.hpp  bot_think.cpp  bot_utils.cpp
src/ctf/: g_ctf.cpp  g_ctf.h  p_ctf_menu.cpp  p_ctf_menu.h
src/gladiator/: bl_botcfg.c  bl_botcfg.h  bl_cmd.c  bl_cmd.h  bl_debug.c  bl_debug.h  bl_main.c  bl_main.h  bl_redirgi.c  bl_redirgi.h  bl_spawn.c  bl_spawn.h  botlib.h
src/monsters/: m_actor.cpp  m_arachnid.cpp  m_berserk.cpp  m_boss2.cpp  m_boss3.cpp  m_boss31.cpp  m_boss32.cpp  m_brain.cpp  m_carrier.cpp  m_chick.cpp  m_fixbot.cpp  m_flash.hpp  m_flipper.cpp  m_float.cpp  m_flyer.cpp  m_gekk.cpp  m_gladiator.cpp  m_guardian.cpp  m_guncmdr.cpp  m_gunner.cpp  m_hover.cpp  m_infantry.cpp  m_insane.cpp  m_medic.cpp  m_move.cpp  m_mutant.cpp  m_parasite.cpp  m_shambler.cpp  m_soldier.cpp  m_stalker.cpp  m_supertank.cpp  m_tank.cpp  m_turret.cpp  m_widow.cpp  m_widow2.cpp
src/rogue/: g_rogue_newdm.cpp  g_rogue_spawn.cpp  g_rogue_sphere.cpp  m_rogue_stalker.cpp  m_rogue_turret.cpp  m_rogue_widow.cpp  m_rogue_widow2.cpp  rogue_dm_ball.cpp  rogue_dm_tag.cpp
src/tests/: g_runthink_test.cpp  g_utils_target_selection_test.cpp  pickup_doppelganger.test.cpp
src/xatrix/: g_xatrix_monster.cpp  m_xatrix_fixbot.cpp  m_xatrix_gekk.cpp
tests/: activation_message_tests.cpp  autodoc_regen_tests.cpp  broadcast_friendly_message_tests.cpp  create_fly_monster_failure_tests.cpp  ctf_flag_state_tests.cpp  friendly_message_tests.cpp  horde_lives_tests.cpp  ip_filter_write_tests.cpp  menu_copy_tests.cpp  menu_layout_truncation_tests.cpp  menu_statusbar_tests.cpp  shambler_balance_tests.cpp  spawn_gravity_tests.cpp
